--- a/pm-analyzer-fiori/.gitignore
+++ b/pm-analyzer-fiori/.gitignore
@@ -1,10 +1,4 @@
-node_modules/
-dist/
-.scp/
-.env
-Makefile*.mta
-mta_archives
-mta-*
-resources
-archive.zip
-.*_mta_build_tmp
+# Node dependencies
+/node_modules/
+# Local config file with secrets
+/webapp/config.json
