--- a/pm-analyzer-fiori/ui5.yaml
+++ b/pm-analyzer-fiori/ui5.yaml
@@ -1,35 +1,24 @@
-# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json
-
-specVersion: "3.1"
+specVersion: '2.6'
 metadata:
-  name: com.sap.pm.pmanalyzerfiori
+  name: pm-analyzer-fiori
 type: application
 server:
   customMiddleware:
-    - name: fiori-tools-proxy
-      afterMiddleware: compression
-      configuration:
-        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
-        ui5:
-          path:
-            - /resources
-            - /test-resources
-          url: https://ui5.sap.com
-        backend:
-          - path: /here
-            url: http://localhost
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
         port: 35729
         path: webapp
         delay: 300
-    - name: fiori-tools-preview
-      afterMiddleware: fiori-tools-appreload
+    - name: fiori-tools-proxy
+      afterMiddleware: compression
       configuration:
-        flp:
-          theme: sap_horizon
-          path: test/flpSandbox.html
-          intent:
-            object: comsappmpmanalyzerfiori
-            action: display
+        # This is the configuration for your local Python backend
+        backend:
+          - path: /api
+            url: http://localhost:5000
+        ui5:
+          path:
+            - /resources
+            - /test-resources
+          url: https://ui5.sap.com
