--- a/pm-analyzer-fiori/webapp/manifest.json
+++ b/pm-analyzer-fiori/webapp/manifest.json
@@ -1,37 +1,15 @@
 {
-    "_version": "1.65.0",
     "sap.app": {
         "id": "com.sap.pm.pmanalyzerfiori",
         "type": "application",
-        "i18n": "i18n/i18n.properties",
         "applicationVersion": {
             "version": "0.0.1"
         },
         "title": "{{appTitle}}",
-        "description": "{{appDescription}}",
-        "resources": "resources.json",
-        "sourceTemplate": {
-            "id": "@sap/generator-fiori:basic",
-            "version": "1.18.2",
-            "toolsId": "e107e4e3-e743-4c5c-982a-3d7684eb64f7"
-        },
-        "dataSources": {
-            "mainService": {
-                "uri": "mock_data.json",
-                "type": "JSON"
-            }
-        }
+        "description": "{{appDescription}}"
     },
     "sap.ui": {
         "technology": "UI5",
-        "icons": {
-            "icon": "",
-            "favIcon": "",
-            "phone": "",
-            "phone@2": "",
-            "tablet": "",
-            "tablet@2": ""
-        },
         "deviceTypes": {
             "desktop": true,
             "tablet": true,
@@ -39,12 +17,12 @@
         }
     },
     "sap.ui5": {
-        "flexEnabled": true,
         "dependencies": {
             "minUI5Version": "1.138.0",
             "libs": {
                 "sap.m": {},
-                "sap.ui.core": {}
+                "sap.ui.core": {},
+                "sap.ui.layout": {}
             }
         },
         "contentDensities": {
@@ -55,55 +33,9 @@
             "i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
                 "settings": {
-                    "bundleName": "com.sap.pm.pmanalyzerfiori.i18n.i18n"
-                }
-            },
-            "": {
-                "dataSource": "mainService",
-                "type": "sap.ui.model.json.JSONModel",
-                "preload": true
-            }
-        },
-        "resources": {
-            "css": [
-                {
-                    "uri": "css/style.css"
-                }
-            ]
-        },
-        "routing": {
-            "config": {
-                "routerClass": "sap.m.routing.Router",
-                "viewType": "XML",
-                "viewPath": "com.sap.pm.pmanalyzerfiori.view",
-                "controlId": "app",
-                "controlAggregation": "pages",
-                "async": true
-            },
-            "routes": [
-                {
-                    "pattern": "",
-                    "name": "worklist",
-                    "target": "worklist"
-                },
-                {
-                    "pattern": "Notifications/{objectId}",
-                    "name": "object",
-                    "target": "object"
-                }
-            ],
-            "targets": {
-                "worklist": {
-                    "viewName": "Worklist",
-                    "viewId": "worklist",
-                    "viewLevel": 1,
-                    "title": "{i18n>worklistViewTitle}"
-                },
-                "object": {
-                    "viewName": "Object",
-                    "viewId": "object",
-                    "viewLevel": 2,
-                    "title": "{i18n>objectViewTitle}"
+                    "bundleUrl": "i18n/i18n.properties",
+                    "supportedLocales": ["en", "de"],
+                    "fallbackLocale": "en"
                 }
             }
         },
@@ -111,7 +43,40 @@
             "viewName": "com.sap.pm.pmanalyzerfiori.view.App",
             "type": "XML",
             "async": true,
-            "id": "app"
+            "id": "App"
+        },
+        "routing": {
+            "config": {
+                "routerClass": "sap.m.routing.Router",
+                "viewType": "XML",
+                "async": true,
+                "viewPath": "com.sap.pm.pmanalyzerfiori.view",
+                "controlAggregation": "pages",
+                "controlId": "app",
+                "clearControlAggregation": false
+            },
+            "routes": [
+                {
+                    "name": "worklist",
+                    "pattern": "",
+                    "target": ["worklist"]
+                },
+                {
+                    "name": "object",
+                    "pattern": "Notifications/{notificationId}",
+                    "target": ["object"]
+                }
+            ],
+            "targets": {
+                "worklist": {
+                    "viewName": "Worklist",
+                    "viewId": "worklist"
+                },
+                "object": {
+                    "viewName": "Object",
+                    "viewId": "object"
+                }
+            }
         }
     }
 }
