--- a/pm-analyzer-fiori/webapp/manifest.json
+++ b/pm-analyzer-fiori/webapp/manifest.json
@@ -16,13 +16,11 @@
             "libs": {
                 "sap.m": {},
                 "sap.ui.core": {},
-                "sap.ui.layout": {}
+                "sap.ui.layout": {},
+                "sap.ui.comp": {}
             }
         },
-        "contentDensities": {
-            "compact": true,
-            "cozy": true
-        },
+        "contentDensities": { "compact": true, "cozy": true },
         "models": {
             "i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
