--- a/pm-analyzer-fiori/ui5.yaml
+++ b/pm-analyzer-fiori/ui5.yaml
@@ -9,6 +9,7 @@ framework:
     - name: sap.m
     - name: sap.ui.core
     - name: sap.ui.layout
+    - name: sap.ui.comp
     - name: themelib_sap_horizon
 server:
   customMiddleware:
