--- a/pm-analyzer-fiori/webapp/manifest.json
+++ b/pm-analyzer-fiori/webapp/manifest.json
@@ -1,10 +1,23 @@
 {
+    "_version": "1.2.0",
     "sap.app": {
         "id": "com.sap.pm.pmanalyzerfiori",
         "type": "application",
         "applicationVersion": { "version": "0.0.1" },
         "title": "{{appTitle}}",
-        "description": "{{appDescription}}"
+        "description": "{{appDescription}}",
+        "dataSources": {
+            "analysisApi": {
+                "uri": "/api/",
+                "type": "REST"
+                # For a REST service, you typically don't need "settings" like odataVersion.
+                # If your backend were OData, you'd configure it here.
+            },
+            "notificationsMockData": {
+                "uri": "mock_data_en.json", # Default to English mock data
+                "type": "JSON"
+            }
+        }
     },
     "sap.ui": {
         "technology": "UI5",
@@ -29,6 +42,15 @@
                     "supportedLocales": ["en", "de"],
                     "fallbackLocale": "en"
                 }
+            },
+            "": { # This is the default model, used by Worklist.controller.js
+                "type": "sap.ui.model.json.JSONModel",
+                "dataSource": "notificationsMockData", # Link to the dataSource defined above
+                "preload": true # Load data synchronously with the app
+            },
+            "analysis": { # Model for AI analysis results (managed by controllers)
+                "type": "sap.ui.model.json.JSONModel",
+                "uri": "" # No URI needed, as it's populated dynamically by controllers
             }
         },
         "rootView": {
