--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,10 @@ jobs:
         run: npm install -g mbt # Install the Multi-Target Application Build Tool globally
 
       # --- Docker Build and Push Steps ---
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3 # This action sets up the Buildx builder
+        # No configuration needed here, it defaults to a suitable driver
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -43,9 +47,9 @@ jobs:
         with:
           context: ./backend # Path to the directory containing your Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/pm-analyzer-backend:latest # IMPORTANT: Use your Docker Hub username here
-          cache-from: type=gha # Cache Docker layers using GitHub Actions cache
-          cache-to: type=gha,mode=max
+          tags: ${{ secrets.DOCKER_USERNAME }}/pm-analyzer-backend:latest
+          cache-from: type=gha,scope=buildx-cache # Use GitHub Actions cache
+          cache-to: type=gha,mode=max,scope=buildx-cache # Export cache to GitHub Actions
 
       # --- Cloud Foundry Deployment Steps ---
       - name: Login to Cloud Foundry
@@ -65,5 +69,3 @@ jobs:
 
       - name: Deploy MTA Archive
         run: cf deploy mta_archives/com.sap.pm.pmanalyzer_1.0.0.mtar -f --retries 1
-        # Ensure the filename matches your MTA ID and version from mta.yaml
-        # (ID: com.sap.pm.pmanalyzer, Version: 1.0.0)
