--- a/mta.yaml
+++ b/mta.yaml
@@ -21,7 +21,8 @@ modules:
       - name: pm-analyzer-backend # Approuter requires the backend module directly
         properties:
           # Reference the URL provided by the backend module's 'provides' section
-          backend_url: ~{pm-analyzer-backend/backend_url_property/url}
+          # This should be the most direct way to get the URL
+          backend_url: ~{pm-analyzer-backend/url} # Referencing the 'url' property directly from the backend module
 
   # ------------------------------------------------------------
   # Fiori Frontend Module
@@ -77,18 +78,20 @@ modules:
         image: ${{ secrets.DOCKER_USERNAME }}/pm-analyzer-backend:latest
     # Explicitly provide the URL property for other modules to consume
     provides:
-      - name: backend_url_property # This name is arbitrary, but must be consistent
+      - name: url # Provide the URL directly as 'url'
         properties:
           url: "${{self.url}}" # 'self.url' exposes the module's own URL
     requires:
       - name: pm-analyzer-uaa
+        group: destinations # Use a group to inject credentials as environment variables
         properties:
-          # Reference the credentials from the XSUAA resource's provided property
-          xsuaa_credentials: ~{pm-analyzer-uaa/xsuaa_credentials_property}
+          name: pm-analyzer-uaa-binding # This name will be used in VCAP_SERVICES
+          binding: ~{pm-analyzer-uaa} # Bind to the XSUAA service
       - name: pm-analyzer-destination
+        group: destinations # Use a group to inject credentials as environment variables
         properties:
-          # Reference the credentials from the Destination resource's provided property
-          destination_credentials: ~{pm-analyzer-destination/destination_credentials_property}
+          name: pm-analyzer-destination-binding # This name will be used in VCAP_SERVICES
+          binding: ~{pm-analyzer-destination} # Bind to the Destination service
 
 
 resources:
@@ -101,9 +104,6 @@ resources:
       service: xsuaa
       service-plan: application
       path: ./pm-analyzer-fiori/xs-security.json
-    properties:
-      # Explicitly provide credentials as a property of the resource for other modules to consume
-      xsuaa_credentials_property: ${service.credentials}
 
   # ------------------------------------------------------------
   # HTML5 Application Repository Service (to host UI5 app)
@@ -122,6 +122,3 @@ resources:
     parameters:
       service: destination
       service-plan: lite
-    properties:
-      # Explicitly provide credentials as a property of the resource for other modules to consume
-      destination_credentials_property: ${service.credentials}
