--- a/pm-analyzer-fiori/ui5-deploy.yaml
+++ b/pm-analyzer-fiori/ui5-deploy.yaml
@@ -20,13 +20,5 @@ builder:
         relativePaths: true
         additionalFiles:
           - xs-app.json
-  tasks: # Moved minify configuration here
-    - name: minify
-      afterTask: replaceCopyright # This task typically runs after copyright replacement
-      configuration:
-        # Exclude the Auth0 SDK from minification.
-        # The path here is relative to the webapp folder, so '**/auth0-spa-js.production.js'
-        # will match it wherever it might be included in the build output.
-        excludes:
-          - "**/auth0-spa-js.production.js"
-          - "**/auth0-spa-js.js" # Also exclude the non-production version just in case
+  # Removed the 'tasks' section as it's causing the "must not be provided here" error.
+  # Minification behavior will revert to default.
