--- a/pm-analyzer-fiori/package.json
+++ b/pm-analyzer-fiori/package.json
@@ -1,39 +1,35 @@
 {
-  "name": "pm-analyzer-fiori",
+  "name": "com.sap.pm.pmanalyzerfiori",
   "version": "0.0.1",
-  "description": "An SAP Fiori application.",
+  "private": true,
+  "description": "A Fiori application for PM Notification Quality Analysis",
   "keywords": [
     "ui5",
     "openui5",
     "sapui5"
   ],
   "main": "webapp/index.html",
-  "dependencies": {
-    "@auth0/auth0-spa-js": "^2.3.0"
+  "scripts": {
+    "start": "fiori run --open 'test/flpSandbox.html?sap-ui-xx-viewCache=false'",
+    "start-local": "fiori run --config ./ui5-local.yaml --open 'test/flpSandbox.html?sap-ui-xx-viewCache=false'",
+    "build": "ui5 build --clean-dest --config ui5.yaml",
+    "deploy": "fiori verify",
+    "deploy-config": "fiori add deploy-config",
+    "build:cf": "ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo --no-minify",
+    "build:mta": "rimraf resources webapp/resources webapp/test-resources dist && mbt build --mtar archive",
+    "start-mock": "fiori run --config ./ui5-mock.yaml --open 'test/flpSandbox.html?sap-ui-xx-viewCache=false'",
+    "start-noflp": "fiori run --open 'index.html?sap-ui-xx-viewCache=false'"
   },
   "devDependencies": {
-    "@sap-ux/ui5-middleware-fe-mockserver": "2",
-    "@sap/ux-ui5-tooling": "1",
+    "@sap/ux-ui5-tooling": "1.*",
     "@ui5/cli": "^3.0.0",
-    "mbt": "^1.2.29",
-    "rimraf": "^5.0.5",
-    "ui5-task-zipper": "^3.4.x",
-    "ui5-middleware-simpleproxy": "^0.7.0"
+    "rimraf": "^3.0.2",
+    "ui5-task-zipper": "^0.5.0"
   },
-  "scripts": {
-    "start": "fiori run --config ./ui5.yaml --open \"webapp/index.html\"",
-    "start-local": "fiori run --config ./ui5-local.yaml --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#comsappmpmanalyzerfiori-display\"",
-    "build": "ui5 build --config=ui5.yaml --clean-dest --dest dist",
-    "deploy": "fiori cfDeploy",
-    "deploy-config": "fiori add deploy-config",
-    "start-noflp": "echo \\\"This application was generated with a local metadata file and does not reference a live server. Please add the required server configuration or start this application with mock data using the target: npm run start-mock\\\"",
-    "start-mock": "fiori run --config ./ui5-mock.yaml --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#comsappmpmanalyzerfiori-display\"",
-    "int-test": "fiori run --config ./ui5-mock.yaml --open 'test/integration/opaTests.qunit.html'",
-    "start-variants-management": "echo \\\"This application was generated with a local metadata file and does not reference a live server. Please add the required server configuration or start this application with mock data using the target: npm run start-mock\\\"",
-    "unit-test": "fiori run --config ./ui5-mock.yaml --open 'test/unit/unitTests.qunit.html'",
-    "build:cf": "ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo",
-    "build:mta": "rimraf resources mta_archives && mbt build",
-    "undeploy": "cf undeploy comsappmpmanalyzerfiori --delete-services --delete-service-keys --delete-service-brokers"
-  },
-  "sapuxLayer": "CUSTOMER_BASE"
+  "ui5": {
+    "dependencies": [
+      "@sap/ux-ui5-tooling",
+      "ui5-task-zipper"
+    ]
+  }
 }
