--- a/pm-analyzer-fiori/ui5.yaml
+++ b/pm-analyzer-fiori/ui5.yaml
@@ -1,6 +1,6 @@
-specVersion: "2.6"
+specVersion: "3.1" # Changed from "2.6" for consistency
 metadata:
-  name: pm-analyzer-fiori
+  name: com.sap.pm.pmanalyzerfiori
 type: application
 framework:
   name: SAPUI5
@@ -25,3 +25,9 @@ server:
         backend:
           - path: /api
             url: http://localhost:5001
+builder: # Added builder section
+  settings: # Added settings for standard tasks
+    minify:
+      excludes:
+        - "**/auth0-spa-js.production.js"
+        - "**/auth0-spa-js.js" # Also exclude the non-production version just in case
