--- a/pm-analyzer-fiori/package.json
+++ b/pm-analyzer-fiori/package.json
@@ -15,7 +15,7 @@
     "build": "ui5 build --clean-dest --config ui5.yaml",
     "deploy": "fiori verify",
     "deploy-config": "fiori add deploy-config",
-    "build:cf": "ui5 build preload --clean-dest --config ui5-deploy.yaml --exclude-task=generateComponentPreload --include-task=generateCachebusterInfo",
+    "build:cf": "node -e \"require('fs').rmSync('webapp/libs/auth0-spa-js.production.js', { force: true }); require('fs').rmSync('webapp/libs/auth0-spa-js.js', { force: true });\" && ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo",
     "build:mta": "rimraf resources webapp/resources webapp/test-resources dist && mbt build --mtar archive",
     "start-mock": "fiori run --config ./ui5-mock.yaml --open 'test/flpSandbox.html?sap-ui-xx-viewCache=false'",
     "start-noflp": "fiori run --open 'index.html?sap-ui-xx-viewCache=false'"
@@ -25,7 +25,7 @@
     "@ui5/cli": "^3.0.0",
     "rimraf": "^3.0.2",
     "ui5-task-zipper": "^0.5.0",
-    "fs-extra": "^11.1.0" 
+    "fs-extra": "^11.1.0" # This dependency is still needed if you use 'fs-extra' elsewhere, but not for this specific script line
   },
   "ui5": {
     "dependencies": [
