--- a/mta.yaml
+++ b/mta.yaml
@@ -15,10 +15,11 @@ modules:
       memory: 256M
     requires:
       - name: pm-analyzer-html5-repo-host
-      - name: pm-analyzer-uaa
+      # Removed: - name: pm-analyzer-uaa # No longer needed for authentication
       - name: pm-analyzer-destination
-      # Removed direct 'requires' for pm-analyzer-backend and its URL property.
-      # The App Router will use the 'destination' service to find the backend.
+      - name: pm-analyzer-backend # Approuter requires the backend module directly
+        properties:
+          backend_url: ~{pm-analyzer-backend/url} # Reference the URL directly from the backend module.
 
   # ------------------------------------------------------------
   # Fiori Frontend Module
@@ -36,7 +37,7 @@ modules:
     properties:
       SAP_UI5_VERSION: 1.120.1
     requires:
-      - name: pm-analyzer-uaa
+      # Removed: - name: pm-analyzer-uaa # No longer needed for authentication
       - name: pm-analyzer-html5-repo-host
         parameters:
           content-target: true
@@ -72,25 +73,17 @@ modules:
       memory: 512M # Adjust as needed
       docker:
         image: ${{ secrets.DOCKER_USERNAME }}/pm-analyzer-backend:latest
-    # Removed 'provides' section for URL as it's not needed for direct binding
+    provides:
+      - name: url # Provide the URL directly as 'url'
+        properties:
+          url: "${{self.url}}" # 'self.url' exposes the module's own URL
     requires:
-      # Bind XSUAA service directly. Credentials will be in VCAP_SERVICES.
-      - name: pm-analyzer-uaa
-      # Bind Destination service directly. Credentials will be in VCAP_SERVICES.
+      # Removed: - name: pm-analyzer-uaa # No longer needed for authentication
       - name: pm-analyzer-destination
 
 
 resources:
-  # ------------------------------------------------------------
-  # XSUAA Service (for authentication and authorization)
-  # ------------------------------------------------------------
-  - name: pm-analyzer-uaa
-    type: org.cloudfoundry.managed-service
-    parameters:
-      service: xsuaa
-      service-plan: application
-      path: ./pm-analyzer-fiori/xs-security.json
-
+  # Removed: XSUAA Service (pm-analyzer-uaa) as authentication is removed
   # ------------------------------------------------------------
   # HTML5 Application Repository Service (to host UI5 app)
   # ------------------------------------------------------------
