--- a/pm-analyzer-fiori/webapp/manifest.json
+++ b/pm-analyzer-fiori/webapp/manifest.json
@@ -49,6 +49,10 @@
             "analysis": {
                 "type": "sap.ui.model.json.JSONModel",
                 "uri": ""
+            },
+            "ui": {
+                "type": "sap.ui.model.json.JSONModel",
+                "uri": ""
             }
         },
         "rootView": {
