--- a/approuter/xs-app.json
+++ b/approuter/xs-app.json
@@ -1,19 +1,19 @@
 {
   "welcomeFile": "/pm-analyzer-fiori/index.html",
-  "authenticationMethod": "none", # Changed to 'none' for no authentication
+  "authenticationMethod": "none", 
   "routes": [
     {
       "source": "^/api/(.*)$",
       "target": "$1",
       "destination": "pm-analyzer-backend",
-      "authenticationType": "none", # Changed to 'none'
+      "authenticationType": "none", 
       "httpMethods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
     },
     {
       "source": "^(.*)$",
       "target": "$1",
       "service": "html5-apps-repo-rt",
-      "authenticationType": "none" # Changed to 'none'
+      "authenticationType": "none" 
     }
   ]
 }
