--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,13 +35,11 @@ jobs:
           cf plugins
 
       - name: Install MTA Build Tool (MBT)
-        # Explicitly install a specific version of MBT to avoid potential bugs in latest
-        run: npm install -g mbt@1.2.0 # Trying a specific version
-        # If 1.2.0 also fails, you might try other versions like 1.1.0 or 1.2.33
+        run: npm install -g mbt@1.2.0
 
       # --- Docker Build and Push Steps ---
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3 # This action sets up the Buildx builder
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -53,11 +51,11 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v5
         with:
-          context: ./backend # Path to the directory containing your Dockerfile
+          context: ./backend
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/pm-analyzer-backend:latest
-          cache-from: type=gha,scope=buildx-cache # Use GitHub Actions cache
-          cache-to: type=gha,mode=max,scope=buildx-cache # Export cache to GitHub Actions
+          cache-from: type=gha,scope=buildx-cache
+          cache-to: type=gha,mode=max,scope=buildx-cache
 
       # --- Cloud Foundry Deployment Steps ---
       - name: Login to Cloud Foundry
@@ -75,7 +73,19 @@ jobs:
 
       - name: Build MTA Archive
         run: mbt build -p=cf --mtar archive
-        working-directory: . # Ensure mbt build runs from the repository root
+        working-directory: .
+
+      # Debugging step: Print content of the problematic XML file
+      - name: Debug Worklist.view.xml content
+        run: |
+          echo "--- Content of Worklist.view.xml on runner ---"
+          cat pm-analyzer-fiori/webapp/view/Worklist.view.xml
+          echo "--- End of Worklist.view.xml content ---"
+        # This step will run even if the previous one (mbt build) failed,
+        # but it's best to place it before the Fiori build step in case
+        # mbt build itself is failing before calling npm run build:cf.
+        # However, the error is from 'npm run build:cf', so placing it before
+        # 'mbt build' is more logical to ensure the file exists.
 
       - name: Deploy MTA Archive
         run: cf deploy mta_archives/com.sap.pm.pmanalyzer_1.0.0.mtar -f --retries 1
